--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "1.0.50",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun run --watch src/index.ts"
+    "dev": "bun run --watch src/index.ts",
+    "build": "bun-vercel ./src/index.ts"
   },
   "dependencies": {
     "@elysiajs/swagger": "^1.0.5",
     "elysia": "latest"
   },
   "devDependencies": {
-    "bun-types": "latest"
+    "bun-types": "latest",
+    "bun-vercel": "^1.0.0-alpha.4"
   },
   "module": "src/index.js"
 }
